# xtract-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_RU.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pr-deploy.yml
app/: __init__.py  config.py  main.py
app/bot/: __init__.py  dispatcher.py  ui.py
app/bot/handlers/: admin.py  inline.py  private.py
app/bot/middlewares/: __init__.py  access.py
app/db/: __init__.py  models.py  session.py
app/formatters/: __init__.py  telegram.py
app/providers/: __init__.py  base.py  external_http.py  fake.py  public_embed.py  x_api.py
app/repositories/: __init__.py  admin_actions.py  share_events.py  tweet_cache.py  users.py
app/services/: __init__.py  access.py  stats.py  tweet_share.py
app/utils/: __init__.py  urls.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_access.py  test_formatters.py  test_public_embed_provider.py  test_tweet_share.py  test_urls.py
