[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtract-bot"
version = "0.1.0"
description = "Telegram bot for sharing X/Twitter posts inside Telegram."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.17,<4",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "SQLAlchemy[asyncio]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1",
  "ruff>=0.9,<1",
]

[project.scripts]
xtract-bot = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008", "RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
